# src/main/kotlin/com/signicat/interview/domain/services/interfaces/UserService.kt
@@ -6,4 +6,6 @@ interface UserService {
 
     fun registerUser(user: User): User?
 
+    fun login(username: String, password: String): String
+
 }
