# src/main/kotlin/com/signicat/interview/gen/api/model/InlineObjectDto.kt
@@ -1,0 +1,18 @@
+package com.signicat.interview.gen.api.model
+
+import com.fasterxml.jackson.annotation.JsonProperty
+
+/**
+ * 
+ * @param username 
+ * @param password 
+ */
+data class InlineObjectDto(
+
+    @field:JsonProperty("username") val username: kotlin.String? = null,
+
+    @field:JsonProperty("password") val password: kotlin.String? = null
+) {
+
+}
+
