# src/main/resources/templates/openapi.yml
@@ -28,6 +28,32 @@ paths:
             application/json:
               schema:
                 $ref: 'schemas/user.yml'
+  /users/login:
+    post:
+      summary: login
+      operationId: login
+      requestBody:
+        description: Username and Password to login
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: true
+              properties:
+                username:
+                  required: true
+                  type: string
+                password:
+                  required: true
+                  type: string
+      responses:
+        '200':
+          description: JWA Token
+          content:
+            application/json:
+              schema:
+                type: string
   /users/test:
     get:
       summary: Test
